theme/scss/site/plugins/woocommerce/base.scss
/* layout */

// treat alignwide as alignfull for woocommerce
main.wc-main.alignwide, *[class^='wc-block'].alignwide {
	position: relative;
	right: 0px !important; // Fallback
	right: calc((100vw - 100%)/2);
	width: 100vw;
	max-width: 100vw;
	clear: both;
}

/* products page */

ul.wc-block-product-template li.wc-block-product, ul.wc-block-grid__products li.wc-block-grid__product {
	background-color: $grey-5;
}

ul.wc-block-grid__products {
	gap: 10px;
	li.wc-block-grid__product {
		max-width: calc((100% - (3 * 10px)) / 4) !important;
	}
}

@media (max-width: 480px) {
	.wc-block-grid.has-4-columns .wc-block-grid__product {
		max-width: calc(100% - 50px) !important;
		margin-bottom: 10px;
	}
}

/* categories */

/* reviews */

/* product page */

.wp-block-woocommerce-add-to-cart-form .quantity .qty {
	width: 5em;
}

.wp-block-woocommerce-add-to-cart-form form.cart > .quantity:not(.wc-block-components-quantity-selector) .qty {
	height: 100%;
}

button.single_add_to_cart_button, button.wc-block-components-button, button.woocommerce-Button, div.woocommerce button {
	@extend .btn;
	background-color: #32373c;
	color: white;
}

button.single_add_to_cart_button:hover, button.wc-block-components-button:hover, button.woocommerce-Button:hover, div.woocommerce button:hover {
	filter: brightness(85%);
	background-color: #32373c;
	color: white;
}



/* forms */

/* account */

.woocommerce-MyAccount-navigation {
	@extend .list-group;
}

.woocommerce-MyAccount-navigation-link {
	padding: 0 !important;

	> a {
		@extend .list-group-item;
		@extend .list-group-item-action;
		padding: 1em !important;
	}
}

